committing while computer is being repaired

--- a/server/Views/Home/Index.cshtml
+++ b/server/Views/Home/Index.cshtml
@@ -2,6 +2,7 @@
 @{
     ViewData["Title"] = "Home Page";
     var Hellos = ViewData["Hellos"] as List<server.Models.Database.Hello>;
+    var intvalue = ViewData["intValue"] as System.Nullable<System.Numerics.BigInteger>;
 }
 
 <div class="text-center">
@@ -13,17 +14,20 @@
             <th> Message </th>
             <th> Id </th>
         </tr>
-        @foreach (var hello in Hellos) {
+        @foreach (var hello in Hellos)
+        {
             <tr>
                 <td> @hello.Header </td>
                 <td> @hello.Message </td>
                 <td> @hello.Id </td>
             </tr>
-            
         }
     </table>
-    <p>  </p>
-    @using (Html.BeginForm()) {
+    <p>
+        @intvalue.Value.ToString()
+    </p>
+    @using (Html.BeginForm())
+    {
         @Html.EditorFor(m => m.Header)
         @Html.EditorFor(m => m.Message)
         <input type="submit">
