small update to site.css to re invert images back to normal if in dark mode.

--- a/server/wwwroot/css/site.css
+++ b/server/wwwroot/css/site.css
@@ -82,6 +82,10 @@ body {
         filter: invert(1) hue-rotate(180deg);
     }
 
+    img {
+        filter: invert(1) hue-rotate(180deg);
+    }
+
     @-moz-document url-prefix() {
         html {
             background: black;
