--- a/server/Views/Shared/_Layout.cshtml
+++ b/server/Views/Shared/_Layout.cshtml
@@ -33,50 +33,22 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Shop" asp-action="Index">Shop</a>
                         </li>
                     </ul>
-                    <ul class="navbar-nav">
+                    <span class="navbar-text">
                         @if (User?.Identity?.IsAuthenticated ?? false)
-
-
-
                         {
-                            <li class="nav-item navbar-text">
-                                @User.Identity.Name
-                            </li>
-                            <li class="nav-item">
-                                <button type="button" class="btn btn-danger">
-                                    <a class="nav-link text-light" asp-area="" asp-controller="User" asp-action="Logout">Logout</a>
-                                </button>
-                            </li>
-
-
-
-
-
-
-
+                            @User.Identity.Name
+                            <button type="button" class="btn btn-danger">
+                                <a class="text-light" asp-area="" asp-controller="User" asp-action="Logout">Logout</a>
+                            </button>
                         }
-
-
-
                         else
-
-
-
                         {
-                            <li class="nav-item">
-                                <button type="button" class="btn btn-success">
-                                    <a class="nav-link text-light" asp-area="" asp-controller="User" asp-action="Login">Login</a>
-                                </button>
-                            </li>
-
-
-
-
-
-
+                            <button type="button" class="btn btn-success">
+                                <a class="text-light" asp-area="" asp-controller="User" asp-action="Login">Login</a>
+                            </button>
 
                         }
-                    </ul>
+                    </span>
                 </div>
             </div>
         </nav>
@@ -104,8 +76,6 @@
                     </div>
                 </div>
 
-
-
             }
             @RenderBody()
         </main>
@@ -121,6 +91,7 @@
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
     @if (!Html?.ViewData?.ModelState?.IsValid ?? false)
+
     {
         <script>
             $(function () {
