--- a/server/Views/User/Login.cshtml
+++ b/server/Views/User/Login.cshtml
@@ -1,5 +1,6 @@
 @model server.Models.Validation.LoginUserForm
 @{
+    ViewData["Title"] = "Login";
     string returnUrl = (string)ViewData["ReturnUrl"];
 }
 
@@ -12,15 +13,17 @@
     <section class="row">
         <div class="col-3"></div>
         <div class="col-6">
-            @using (Html.BeginForm())
+            @using (Html.BeginForm(FormMethod.Post, new { @id = "LoginForm"}))
             {
                 <div class="form-group">
                     @Html.LabelFor(m => m.UserName)
                     @Html.TextBoxFor(m => m.UserName, new { @class = "form-control", @PlaceHolder = "User Name"})
+                    @Html.ValidationMessageFor(m => m.UserName)
                 </div>
                 <div class="form-group">
                     @Html.LabelFor(m => m.Password)
                     @Html.PasswordFor(m => m.Password, new { @class = "form-control", @PlaceHolder = "Password"})
+                    @Html.ValidationMessageFor(m => m.Password)
                 </div>
                 <input type="submit" class="btn btn-primary">
                 <button type="button" class="btn btn-success">
@@ -30,3 +33,7 @@
         </div>
     </section>
 </div>
+
+@section Scripts {
+    @{ await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+}
