--- a/server/Views/User/Login.cshtml
+++ b/server/Views/User/Login.cshtml
@@ -27,7 +27,7 @@
                 </div>
                 <input type="submit" class="btn btn-primary">
                 <button type="button" class="btn btn-success">
-                    <a class="text-light" asp-area="" asp-controller="User" asp-action="CreateNewUser">Create User</a>
+                    <a class="text-light" asp-area="" asp-controller="User" asp-action="CreateNewUser" asp-route-ReturnUrl="@returnUrl">Create User</a>
                 </button>
             }
         </div>
