--- a/server/Views/Shared/_Layout.cshtml
+++ b/server/Views/Shared/_Layout.cshtml
@@ -104,6 +104,14 @@
         </script>
 
     }
+<script>
+  document.write(
+    '<script src="http://' +
+      (location.host || '${1:localhost}').split(':')[0] +
+      ':35729/livereload.js?snipver=1"></' +
+      'script>'
+  );
+</script>
 </body>
 
 </html>
