--- a/server/Views/User/GetDualAuthCode.cshtml
+++ b/server/Views/User/GetDualAuthCode.cshtml
@@ -1,12 +1,13 @@
 @{
     ViewData["Title"] = "Generate Dual Authentication Key";
     string dualAuthKey = (string) ViewData["dualAuthKey"];
+    string ReturnUrl = (string) ViewData["ReturnUrl"];
 }
 
 <div class="centered rounded text-center">
     <section class="row">
         <div class="col">
-            <h1>Please use the Below QRCode for dual authentication</h1>
+            <h3>Please use the Below QRCode for dual authentication and then hit the "back" button.</h3>
         </div>
     </section>
     <section class="row">
@@ -15,6 +16,11 @@
             </div>
         </div>
     </section>
+    <br />
+    <section class="row">
+        <div class="col"><a class="btn btn-danger" href="@ReturnUrl">Back</a></div>
+    </section>
+    <br />
 </div>
 
 @section head {
@@ -32,8 +38,8 @@
         $(function() {
             var qrcode = new QRCode(document.getElementById("qrcode"), {
                 text: "@dualAuthKey",
-                width: 128,
-                height: 128,
+                width: 200,
+                height: 200,
                 colorDark: "#000000",
                 colorLight: "#FFFFFF",
                 correctLevel: QRCode.CorrectLevel.H
