--- a/server/Views/Shop/View.cshtml
+++ b/server/Views/Shop/View.cshtml
@@ -31,6 +31,10 @@
 <br />
 <section class="row">
     <div class="col">
-        <p class="text-center"> To view the known history of this item please click <a asp-controller="Shop" asp-action="History" asp-route-id="@Model.Id">here</a> </p>
+        <div class="card">
+            <div class="card-body">
+                <p class="card-text text-center"> To view the known history of this item please click <a asp-controller="Shop" asp-action="History" asp-route-id="@Model.Id">here</a> </p>
+            </div>
+        </div>
     </div>
 </section>
