--- a/server/Views/User/Login.cshtml
+++ b/server/Views/User/Login.cshtml
@@ -17,7 +17,7 @@
             {
                 <div class="form-group">
                     @Html.LabelFor(m => m.UserName)
-                    @Html.TextBoxFor(m => m.UserName, new { @class = "form-control", @PlaceHolder = "User Name"})
+                    @Html.TextBoxFor(m => m.UserName, new { @class = "form-control", @PlaceHolder = "User Name", @autofocus = "true"})
                     @Html.ValidationMessageFor(m => m.UserName)
                 </div>
                 <div class="form-group">
