--- a/server/Views/User/Login.cshtml
+++ b/server/Views/User/Login.cshtml
@@ -11,9 +11,9 @@
         </div>
     </section>
     <section class="row">
-        <div class="col-3"></div>
-        <div class="col-6">
-            @using (Html.BeginForm(FormMethod.Post, new { @id = "LoginForm"}))
+        <div class="col-lg-3"></div>
+        <div class="col-lg-6">
+            @using (Html.BeginForm(FormMethod.Post, new { @id = "LoginForm" }))
             {
                 <div class="form-group">
                     @Html.LabelFor(m => m.UserName)
@@ -25,15 +25,15 @@
                     @Html.PasswordFor(m => m.Password, new { @class = "form-control", @PlaceHolder = "Password"})
                     @Html.ValidationMessageFor(m => m.Password)
                 </div>
-                <input type="submit" class="btn btn-primary">
-                <button type="button" class="btn btn-success">
-                    <a class="text-light" asp-area="" asp-controller="User" asp-action="CreateNewUser" asp-route-ReturnUrl="@returnUrl">Create User</a>
-                </button>
+                <input type="submit" class="btn btn-primary" value="Sign In">
+                <a class="text-light btn btn-success" asp-area="" asp-controller="User" asp-action="CreateNewUser"
+                asp-route-ReturnUrl="@returnUrl">Create User</a>
             }
         </div>
+        <div class="col-lg-3"></div>
     </section>
 </div>
 
 @section Scripts {
-    @{ await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+@{ await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
