--- a/server/Views/User/CreateNewUser.cshtml
+++ b/server/Views/User/CreateNewUser.cshtml
@@ -12,8 +12,8 @@
         </div>
     </section>
     <section class="row">
-        <div class="col-3"></div>
-        <div class="col-6">
+        <div class="col-lg-3"></div>
+        <div class="col-lg-6">
             @using (Html.BeginForm())
             {
                 <div class="form-group">
@@ -41,10 +41,11 @@
                     @Html.PasswordFor(m => m.Password, new { @class = "form-control", @PlaceHolder = "Password"})
                     @Html.ValidationMessageFor(m => m.Password)
                 </div>
-                <input type="submit" class="btn btn-primary">
+                <input type="submit" class="btn btn-primary" value="Create User">
             }
         <br />
         </div>
+        <div class="col-lg-3"></div>
     </section>
 </div>
 
