--- a/server/wwwroot/css/site.css
+++ b/server/wwwroot/css/site.css
@@ -113,3 +113,9 @@ body {
         0 100px 80px rgba(0, 0, 0, 0.12),
         0 -2.8px 2.2px rgba(0, 0, 0, 0.086)
 }
+
+@media (max-width: 768px) {
+    .centered {
+        width: 90%;
+    }
+}
